# handwriting-ocr

./: LICENSE.md  README.md  pyproject.toml
src/handwriting_ocr/: analyse.py  convert.py  grammar.py  migrate.py  misspellings.py
