[project]
name = "handwriting-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "David Moody",email = "david@davidxmoody.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-core (>=11.0,<12.0)",
    "pyobjc-framework-vision (>=11.0,<12.0)",
    "pyobjc-framework-cocoa (>=11.0,<12.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "symspellpy (>=6.9.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "handwriting_ocr", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
